Bug 1781831 - Make StyleCssUrl::GetURI assert for main or worker threads. r=emilio

Ideally we would track the owning thread ID but these classes are
wrappers around the Rust objects.

The servo rule for workers is only accessed on the owning worker thread,
so it should be thread safe to assert either a main or DOM worker
thread.