layout/style/ServoStyleConstsInlines.h
@@ -13,6 +13,7 @@
 #include "mozilla/AspectRatio.h"
 #include "mozilla/EndianUtils.h"
 #include "mozilla/URLExtraData.h"
+#include "mozilla/dom/WorkerCommon.h"
 #include "nsGkAtoms.h"
 #include "MainThreadUtils.h"
 #include "nsNetUtil.h"
@@ -419,7 +420,8 @@ inline const URLExtraData& StyleCssUrl::ExtraData() const {
 }
 
 inline StyleLoadData& StyleCssUrl::LoadData() const {
-  MOZ_DIAGNOSTIC_ASSERT(NS_IsMainThread());
+  MOZ_DIAGNOSTIC_ASSERT(NS_IsMainThread() ||
+                        dom::IsCurrentThreadRunningWorker());
   if (MOZ_LIKELY(_0->load_data.tag == StyleLoadDataSource::Tag::Owned)) {
     return const_cast<StyleLoadData&>(_0->load_data.owned._0);
   }
@@ -427,7 +429,8 @@ inline StyleLoadData& StyleCssUrl::LoadData() const {
 }
 
 inline nsIURI* StyleCssUrl::GetURI() const {
-  MOZ_DIAGNOSTIC_ASSERT(NS_IsMainThread());
+  MOZ_DIAGNOSTIC_ASSERT(NS_IsMainThread() ||
+                        dom::IsCurrentThreadRunningWorker());
   auto& loadData = LoadData();
   if (!(loadData.flags & StyleLoadDataFlags::TRIED_TO_RESOLVE_URI)) {
     loadData.flags |= StyleLoadDataFlags::TRIED_TO_RESOLVE_URI;
